# devcontainer

./: .csharpierignore  .editorconfig  .gitignore  .gitmodules  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  compose.yml  install.sh  ruff.toml
agents/: call-opus-agent.agent.md  call-summoner-agent.agent.md  call-summoner.agent.md  chocobo.agent.md  general-purpose.agent.md  moogle.agent.md  opus-child-agent.md  opus-parent-agent.md  planning-agent.md  summoner.agent.md
agents-docs/: intro.md
agents-docs-preview/: package-lock.json  package.json  sidebars.auto.js
agents-docs-preview/scripts/: setup-symlink.js
devcontainers/common/: features.json
devcontainers/dotnet/: features.json
devcontainers/plane/: features.json
devcontainers/react/: features.json
docusaurus/: Dockerfile  compose.yml  docusaurus.config.js  package-lock.json  package.json  sidebars.auto.js
docusaurus/docs/: intro.md
docusaurus/scripts/: generate-sidebar.js  setup-symlink.js  watch-docs.js
dotfiles/: .tmux.conf
dotnet/.devcontainer/: devcontainer.json
features/claude-code/: devcontainer-feature.json  install.sh
prompts/: commit.md
scripts/: format.sh  start-tmux.sh
scripts/redis-utils/: .gitignore  pyproject.toml  run_monitor.sh
scripts/redis-utils/app/: README.md  __init__.py  config.py  messages.py  orchestration.py  receiver.py  redis_client.py  sender.py  utils.py
scripts/redis-utils/app/cli/: __init__.py  blpop.py  init_orch.py  main.py  rpush.py
scripts/redis-utils/app/monitor/: README.md  __init__.py  main.py  tui_main.py
scripts/redis-utils/app/monitor/components/: __init__.py  chat_view.py  queue_status.py  session_selector.py
scripts/redis-utils/app/monitor/services/: __init__.py  error_logger.py  log_storage.py  pubsub_listener.py  session_scanner.py
scripts/redis-utils/app/scenarios/: __init__.py  chocobo_scenario.py  moogle_scenario.py  summoner_scenario.py
scripts/redis-utils/app/tests/: __init__.py  conftest.py  test_config.py  test_messages.py  test_orchestration.py  test_receiver.py  test_redis_client.py  test_scenario.py  test_sender.py
(+126 files in other folders)
