[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-util"
version = "1.0.0"
description = "Redis操作CLIツール - オーケストレーション、RPUSH、BLPOP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "redis-work team"}
]
keywords = ["redis", "cli", "orchestration", "message-queue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "redis>=4.0.0",
    "streamlit>=1.28.0",
    "textual>=0.79.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
# 統合CLIコマンド（将来の拡張用）
redis-util = "app.cli.main:main"

# 個別CLIコマンド
redis-rpush = "app.cli.rpush:main"
redis-blpop = "app.cli.blpop:main"
redis-orch = "app.cli.init_orch:main"

# TUIモニター
redis-monitor = "app.monitor.tui_main:main"

[project.urls]
Homepage = "https://github.com/redis-work"
Repository = "https://github.com/redis-work"

[tool.setuptools]
packages = ["app", "app.cli", "app.monitor", "app.monitor.components", "app.monitor.services"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
